[gd_scene load_steps=11 format=3 uid="uid://dd78km24j4hpk"]

[ext_resource type="Script" uid="uid://dfcx61utlwatd" path="res://scenes/ui/board/story_dialog.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cdr6c4oy51qxv" path="res://scenes/ui/board/actor_view.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="2_54pq6"]
[ext_resource type="Texture2D" uid="uid://thnrfs1tirjj" path="res://assets/gui/menu/backgrounds/main_panel.png" id="2_ofwar"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_hrwt2"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="5_p35sh"]
[ext_resource type="Texture2D" uid="uid://c1upgftggmnfv" path="res://assets/gui/menu/backgrounds/sub_panel3.png" id="5_q60ry"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="6_gq4yq"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="7_q50lx"]

[sub_resource type="LabelSettings" id="LabelSettings_5aeok"]
font = ExtResource("3_hrwt2")

[node name="story_dialog" type="Node2D"]
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 100.0
texture = ExtResource("2_ofwar")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="text" type="Label" parent="background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = -25.0
theme_override_fonts/font = ExtResource("2_54pq6")
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
label_settings = SubResource("LabelSettings_5aeok")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="continue" type="TextureButton" parent="background"]
layout_mode = 0
offset_left = 610.0
offset_top = 205.0
offset_right = 800.0
offset_bottom = 245.0
texture_normal = ExtResource("5_p35sh")
texture_pressed = ExtResource("6_gq4yq")
texture_hover = ExtResource("7_q50lx")
texture_focused = ExtResource("7_q50lx")

[node name="label" type="Label" parent="background/continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_hrwt2")
text = "TR_CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actor_left" type="Node2D" parent="background"]

[node name="background" type="NinePatchRect" parent="background/actor_left"]
offset_top = -50.0
offset_right = 400.0
texture = ExtResource("5_q60ry")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="name" type="Label" parent="background/actor_left"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 400.0
theme_override_fonts/font = ExtResource("2_54pq6")
text = "Actor Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actor_view" parent="background/actor_left" instance=ExtResource("2")]
position = Vector2(-100, 50)

[node name="actor_right" type="Node2D" parent="background"]
position = Vector2(800, 0)

[node name="background" type="NinePatchRect" parent="background/actor_right"]
offset_left = -400.0
offset_top = -50.0
texture = ExtResource("5_q60ry")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="name" type="Label" parent="background/actor_right"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -50.0
theme_override_fonts/font = ExtResource("2_54pq6")
text = "Actor Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actor_view" parent="background/actor_right" instance=ExtResource("2")]
position = Vector2(100, 50)

[connection signal="pressed" from="background/continue" to="." method="_on_continue_pressed"]
